# learning-project

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  PROJECT_PLAN.md  README.md  TEACHER_PROMPT.md
rust/: Cargo.toml
rust/algorithms/src/: lib.rs
rust/algorithms/src/dynamic_programming/: README.md  ex1_fibonacci_number.rs  ex2_climbing_stairs.rs  ex3_coin_change.rs  ex4_longest_common_subsequence.rs  ex5_house_robber.rs  ex6_edit_distance.rs  mod.rs
rust/algorithms/src/graph_traversal/: README.md  ex1_depth_first_search.rs  ex2_breadth_first_search.rs  ex3_number_of_islands.rs  ex4_course_schedule.rs  ex5_clone_graph.rs  ex6_dijkstra_algorithm.rs  mod.rs
rust/algorithms/src/searching/: README.md  ex1_linear_search.rs  ex2_binary_search.rs  ex3_search_in_rotated_sorted_array.rs  mod.rs  (+4 more)
rust/big-o-analysis/: Cargo.toml  README.md
rust/big-o-analysis/src/: ex1_identify_time_complexity.rs  ex2_space_complexity.rs  ex3_best_worst_average.rs  ex4_recursive_complexity.rs  ex5_compare_algorithms.rs  ex6_optimize_code.rs  lib.rs
rust/concurrency/: README.md
rust/concurrency/src/: ex1_basic_threading.rs  ex2_shared_state.rs  ex3_channels.rs  ex4_parallelism.rs  ex5_async_basics.rs  ex6_sync_traits.rs  lib.rs
rust/data-structures/: Cargo.toml
rust/data-structures/src/: lib.rs
rust/design-patterns/: Cargo.toml
rust/design-patterns/src/: README.md  ex1_singleton.rs  ex2_factory.rs  ex3_decorator.rs  ex4_adapter.rs  ex5_observer.rs  ex6_strategy.rs  lib.rs
rust/system-design/: Cargo.toml  README.md
rust/system-design/src/: ex1_caching.rs  ex6_designs.rs  lib.rs
(+396 files in other folders)
